export const snapshot = {};

snapshot[`boolean 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`boolean 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description one.",
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`boolean 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description one.",
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`number 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`number 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description one.",
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`number 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`string 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`string 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description one.",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`string 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
